--- a/src/components/MessageInput/styling/RemoveAttachmentPreviewButton.scss
+++ b/src/components/MessageInput/styling/RemoveAttachmentPreviewButton.scss
@@ -1,11 +1,10 @@
 .str-chat__button.str-chat__attachment-preview__remove-button {
   position: absolute;
   z-index: 1;
-  // todo: do we need semantic variable here?
   top: -6px;
   right: -6px;
   background-color: var(--str-chat__attachment-preview-close-icon-background);
-  border: 3px solid var(--str-chat__attachment-preview-close-icon-color);
+  border: 3px solid var(--str-chat__attachment-preview-close-icon-border-color);
   color: var(--str-chat__attachment-preview-close-icon-color);
   border-radius: var(--radius-max);
 
